--- a/app/src/main/res/layout/exercise_card_edit.xml
+++ b/app/src/main/res/layout/exercise_card_edit.xml
@@ -6,8 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="5dp"
-    android:layout_margin="5dp">
+    android:layout_margin="10dp">
     <LinearLayout
+        android:layout_margin="10dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
